feat(router): set up initial Vue Router configuration

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mdi/font": "7.4.47",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
+    "vue-router": "^4.4.5",
     "vuetify": "^3.6.11"
   },
   "devDependencies": {
