--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
+    "pinia": "^2.2.5",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vue-router": "^4.4.5",
